--- a/ecs.html
+++ b/ecs.html
@@ -20,7 +20,7 @@
                     <li class="nav-item"><a class="nav-link active" href="ap_csa.html">AP CS A</a></li>
                     <li class="nav-item"><a class="nav-link" href="ap_csp.html">AP CSP</a></li>
                     <li class="nav-item"><a class="nav-link active" href="ecs.html">ECS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="projects.html">About Mr. Aguilar</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About Mr. Aguilar</a></li>
                 </ul>
             </div>
         </div>
