--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-md-12 col-lg-5 offset-lg-1 text">
-                            <h3>AP Virtual Fair Video</h3>
-                            <p>Come take a look at what AP CS classes you can take at MAHS this semester. You too can learn how to make amazing apps, animation, programs and art!<br>Click on the image!</p>
+                            <h3><a herf="https://youtu.be/3FDgkHdU1aI">AP Virtual Fair Video</a></h3>
+                            <p>Come take a look at what AP CS classes you can take at MAHS this semester. You too can learn how to make amazing apps, animation, programs and art!<br><a herf="https://youtu.be/3FDgkHdU1aI">Click here</a></p>
                         </div>
                         <div class="col-md-12 col-lg-5">
                             <div class="portfolio-laptop-mockup">
