--- a/ap_csp.html
+++ b/ap_csp.html
@@ -15,12 +15,12 @@
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient" style="background: linear-gradient(120deg, rgb(125,4,255) 0%, rgb(96,53,142) 78%, rgb(173,143,205) 100%);border-style: none;">
         <div class="container"><a class="navbar-brand logo" href="#">CS@MAHS</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="nav navbar-nav ml-auto">
+                <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link active" href="ap_csa.html">AP CS A</a></li>
                     <li class="nav-item"><a class="nav-link active" href="ap_csp.html">AP CSP</a></li>
                     <li class="nav-item"><a class="nav-link" href="ecs.html">ECS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About Mr. Aguilar</a></li>
+                    <li class="nav-item"><a class="nav-link" href="projects.html">About Mr. Aguilar</a></li>
                 </ul>
             </div>
         </div>
