--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient" style="background: linear-gradient(120deg, rgb(125,4,255) 0%, rgb(96,53,142) 78%, rgb(173,143,205) 100%);border-style: none;">
         <div class="container"><a class="navbar-brand logo" href="#">CS@MAHS</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="nav navbar-nav ml-auto">
+                <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link active" href="ap_csa.html">AP CS A</a></li>
                     <li class="nav-item"><a class="nav-link" href="ap_csp.html">AP CSP</a></li>
                     <li class="nav-item"><a class="nav-link" href="ecs.html">ECS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About Mr. Aguilar</a></li>
+                    <li class="nav-item"><a class="nav-link" href="projects.html">About Mr. Aguilar</a></li>
                 </ul>
             </div>
         </div>
@@ -39,8 +39,8 @@
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-md-12 col-lg-5 offset-lg-1 text">
-                            <h3><a href="https://youtu.be/3FDgkHdU1aI">AP Virtual Fair Video</a></h3>
-                            <p>Come take a look at what AP CS classes you can take at MAHS this semester. You too can learn how to make amazing apps, animation, programs and art!<br><a href="https://youtu.be/3FDgkHdU1aI">Click here</a></p>
+                            <h3>AP Virtual Fair Video!!!</h3>
+                            <p>Come take a look at what AP CS classes you can take at MAHS this semester. You too can learn how to make amazing apps, animation, programs and art!<br>Click on the image!</p>
                         </div>
                         <div class="col-md-12 col-lg-5">
                             <div class="portfolio-laptop-mockup">
@@ -78,7 +78,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><i class="icon ion-social-python"></i></div>
+                            <div class="card-header bg-transparent border-0"><i class="icon ion-social-python" style="background: rgb(124,11,253);"></i></div>
                             <div class="card-body">
                                 <h3 class="card-title">Exploring CS</h3>
                                 <p class="card-text" style="font-size: 14px;line-height: 18px;">Course aims to develop in students the computational<br>practices of algorithm development, problem solving and programming within the context of<br>problems that are relevant to the lives of today’s students. Course covers&nbsp;topics such as interface design, limits of computers, and societal and ethical issues.</p>
